# study-buddy-pro

./: CHANGELOG.md  CLAUDE.md  README.md  package.json
.github/workflows/: nightly-release.yml  pr-backend-tests.yml  release-please.yml
docs/: agentic-search.md  commands.md  configurations.md  design-system.md  ocr-commands.md  release-process.md  tuning-context-window.md
source-of-truth/: 00-overview.md  01-product.md  02-brand-visuals.md  03-user-flows.md  04-tech-architecture.md  05-data-model.md  06-api-contracts.md  07-code-rules.md  08-deployment.md  09-open-questions.md  10-glossary.md  source-map.yaml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/prompts/: search_plan.txt  search_synthesis.txt  system_prompt.txt
src-tauri/resources/search-box/: docker-compose.yml
src-tauri/resources/search-box/reader/: Dockerfile  README.md  main.py  requirements.txt  test_main.py
src-tauri/resources/search-box/searxng/: README.md  settings.yml
src-tauri/resources/supertonic/native-server/: config.env  manage.py  requirements.txt
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  mlx_vlm.rs  models.rs  ocr.rs  openrouter.rs  permissions.rs  screenshot.rs  settings_commands.rs  setup.rs  study.rs  study_context.rs  voice.rs
src-tauri/src/config/: defaults.rs  loader.rs  mod.rs  schema.rs  writer.rs
src-tauri/src/search/: llm.rs  mod.rs  pipeline.rs
src-tauri/src/settings_commands/: tests.rs
src-tauri/src/updater/: commands.rs  poller.rs  state.rs  tcc_reset.rs
src-tauri/tests/: search_pipeline_e2e.rs
src/__tests__/: App.test.tsx  OnboardingView.test.tsx  main.test.tsx
src/components/: CapabilityMismatchStrip.tsx  ChatBubble.tsx  CommandSuggestion.tsx  DrawCheckIcon.tsx  MarkdownRenderer.tsx  MinimizedIcon.tsx  ModelPickerPanel.tsx  SandboxSetupCard.tsx  TipBar.tsx  UpdateBanner.tsx
src/components/__tests__/: CapabilityMismatchStrip.test.tsx  MarkdownRenderer.test.tsx  MinimizedIcon.test.tsx  ModelPickerPanel.test.tsx  TipBar.test.tsx  (+4 more)
src/config/: commandArtifacts.ts  commands.ts  searchWarnings.ts  tips.ts
src/contexts/: ConfigContext.tsx
src/hooks/: useOllama.ts  useUpdater.ts
src/lib/: exportSerializer.ts
src/settings/: SettingsWindow.test.tsx  SettingsWindow.tsx  configHelpers.test.ts  configHelpers.ts  types.ts
src/styles/: settings.module.css
src/testUtils/: README.md
src/types/: studyPack.ts
src/utils/: capabilityConflicts.ts  escapeCurrencyDollars.ts
src/view/: AskBarView.tsx
(+26 files in other folders)
