[package]
name = "study-buddy-pro"
version = "0.14.9"
description = "Study Buddy Pro: local-first adaptive tutor with voice"
authors = ["Vindepemarte"]
license = "Apache-2.0"
repository = "https://github.com/vindepemarte/study-buddy-pro"
homepage = "https://github.com/vindepemarte/study-buddy-pro"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "study_buddy_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
tokio = { version = "1.52.3", features = ["macros"] }
futures-util = "0.3.32"
tokio-util = "0.7"
toml = "1.0"
toml_edit = "0.25"
parking_lot = "0.12"
rusqlite = { version = "0.39", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
base64 = "0.22"
html-escape = "0.2"
thiserror = "2"
time = { version = "0.3", features = ["std"] }
async-trait = "0.1"
semver = "1"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
core-graphics = "0.25"
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSArray", "NSDictionary"] }
objc2-vision = { version = "0.3", features = ["VNRecognizeTextRequest", "VNRequestHandler", "VNTypes", "VNDefines"] }

[target.'cfg(target_os = "windows")'.dependencies]
tauri-plugin-global-shortcut = "2.3.2"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["rt", "macros", "net", "io-util"] }
wiremock = "0.6"
tempfile = "3"
